examples/tests/Promote2/midamble.v
Fail Definition h := True.
Fail Definition g := True.
Fail Definition f := True.

Definition i := True.
Reset i.
